--- a/app/src/main/res/drawable/btn_p.xml
+++ b/app/src/main/res/drawable/btn_p.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="2dp"/>
+        android:radius="5dp"/>
     <solid
+        android:color="@color/cardview_light_background"/>
+    <stroke
+        android:width="2dp"
         android:color="@color/colorPrimary"/>
 </shape>
