--- a/app/src/main/res/layout/kontencard.xml
+++ b/app/src/main/res/layout/kontencard.xml
@@ -9,29 +9,35 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/kCardView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="256dp"
         android:layout_margin="10dp"
-        app:cardCornerRadius="@dimen/cardview_default_radius"
+        android:clickable="true"
+        android:elevation="2dp"
         app:cardBackgroundColor="@color/cardview_light_background"
-        android:clickable="true">
+        app:cardCornerRadius="@dimen/cardview_default_radius">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/kImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/kText"/>
             <TextView
                 android:id="@+id/kText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:background="@color/cardview_light_background"
                 android:layout_alignParentBottom="true"
-                android:textSize="30sp"
-                android:text="BERITA"
-                android:elevation="@dimen/cardview_default_elevation"/>
+                android:autoSizeMaxTextSize="35sp"
+                android:autoSizeMinTextSize="25sp"
+                android:background="@color/cardview_light_background"
+                android:backgroundTint="@color/cardview_light_background"
+                android:backgroundTintMode="src_atop"
+                android:elevation="@dimen/cardview_default_elevation"
+                android:gravity="center"
+                android:padding="2dp"
+                android:text="@string/pengolahantemulawak" />
+            <ImageView
+                android:id="@+id/kImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/instantemu" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
